--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.4.4",
     "mssql": "^10.0.2",
     "process": "^0.11.10"
   }
