--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
     "mssql": "^10.0.2",
